--- a/flex_security/todo
+++ b/flex_security/todo
@@ -9,4 +9,4 @@
 3. 该客户端实现某个接口,以读取权限数据,如ISecurityMetadata.getSecurityMetadata()
 	3.1 接口使用具体的数据类型
 
-4. SecurityControler增加手工增加需要控制权限的,如addSecurityAction()
+#4. SecurityControler增加手工增加需要控制权限的,如addSecurityAction()
