--- a/flex_security/todo
+++ b/flex_security/todo
@@ -1,12 +1,11 @@
-1.创建基于styleName的权限控制.
-
-如: 
+#1.创建基于styleName的权限控制.
+	如: 
 	styleName="security() or security:"  //resouceString is id
-	styleName="security(resourceString,controlBy) or security:resourceString"
+	styleName="security(permission,controlBy) or security:permission"
 	
-2. remove的控制完善
+#2. remove的控制完善
 
-3. 该客户端实现某个接口,以读取权限数据,如ISecurityMetadata.getSecurityMetadata()
+#3. 该客户端实现某个接口,以读取权限数据,如ISecurityMetadata.getSecurityMetadata()
 	3.1 接口使用具体的数据类型
 
 #4. SecurityControler增加手工增加需要控制权限的,如addSecurityAction()
