--- a/trunk/flex_security/todo
+++ b/trunk/flex_security/todo
@@ -5,7 +5,8 @@
 	
 #2. remove的控制完善
 
-#3. 该客户端实现某个接口,以读取权限数据,如ISecurityMetadata.getSecurityMetadata()
-	3.1 接口使用具体的数据类型
+...#3. 该客户端实现某个接口,以读取权限数据,如ISecurityMetadata.getSecurityActions()
+	#3.1 接口使用具体的数据类型
+	3.2 只要发现mxml有getSecurityActions()方法，即去读取该权限内容
 
 #4. SecurityControler增加手工增加需要控制权限的,如addSecurityAction()
