--- a/flex_security/todo
+++ b/flex_security/todo
@@ -3,7 +3,7 @@
 	styleName="security() or security:"  //resouceString is id
 	styleName="security(permission,controlBy) or security:permission"
 	
-#2. remove的控制完善
+2. remove的控制完善, controlBy remove在security(null,remove)中存在会重复创建securityAction导致不能正常运行的问题
 
 ...#3. 该客户端实现某个接口,以读取权限数据,如ISecurityMetadata.getSecurityActions()
 	#3.1 接口使用具体的数据类型
